--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
                 </nav>
             </header>
             <main>
-                <div class="flex-center">
+                <div class="title flex-center">
                     <h2>MY Projects</h2>
                 </div>
                 <div class="cards-container flex">
