--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               aim to create efficient and well-architected solutions.</p>
             <div class="typing-container">
               <p>I am <span class="typing-text"></span>
-                <span class="cursor">|</span></p>
+                <span class="cursor"></span></p>
             </div>
           </div>
         </div>
