--- a/aboutme.html
+++ b/aboutme.html
@@ -72,56 +72,59 @@
                     </div>
                 </div>
                 <div class="education flex">
-                    <div class="slc">
-                        <h3>School Leaving Certificate</h3>
-                        <table>
-                            <tr class="flex">
-                                <th>School</th>
-                                <td>Childrens' Eternal Academy (CEA)</td>
-                            </tr>
-                            <tr class="flex">
-                                <th>Completed Year</th>
-                                <td>2016</td>
-                            </tr>
-                            <tr class="flex">
-                                <th>CGPA</th>
-                                <td>3.55 </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="plus2">
-                        <h3>Plus 2</h3>
-                        <table>
-                            <tr class="flex">
-                                <th>Institution</th>
-                                <td>St. Xavier's College (SXC)</td>
-                            </tr>
-                            <tr class="flex">
-                                <th>Completed Year</th>
-                                <td>2018</td>
-                            </tr>
-                            <tr class="flex">
-                                <th>CGPA</th>
-                                <td>3.04 </td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="bachelors">
-                        <h3>Bachelors</h3>
-                        <table>
-                            <tr class="flex">
-                                <th>Institution</th>
-                                <td>Asian School of Management and Technology (ASMT)</td>
-                            </tr>
-                            <tr class="flex">
-                                <th>Completed Year</th>
-                                <td>2018</td>
-                            </tr>
-                            <tr class="flex">
-                                <th>CGPA</th>
-                                <td>3.04 </td>
-                            </tr>
-                        </table>
+                    <h2>EDUCATION</h2>
+                    <div class="education-title flex">
+                        <div class="slc">
+                            <h3>School Leaving Certificate</h3>
+                            <table>
+                                <tr class="flex">
+                                    <th>School</th>
+                                    <td>Childrens' Eternal Academy (CEA)</td>
+                                </tr>
+                                <tr class="flex">
+                                    <th>Completed Year</th>
+                                    <td>2016</td>
+                                </tr>
+                                <tr class="flex">
+                                    <th>CGPA</th>
+                                    <td>3.55 </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="plus2">
+                            <h3>Plus 2</h3>
+                            <table>
+                                <tr class="flex">
+                                    <th>Institution</th>
+                                    <td>St. Xavier's College (SXC)</td>
+                                </tr>
+                                <tr class="flex">
+                                    <th>Completed Year</th>
+                                    <td>2018</td>
+                                </tr>
+                                <tr class="flex">
+                                    <th>CGPA</th>
+                                    <td>3.04 </td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="bachelors">
+                            <h3>Bachelors</h3>
+                            <table>
+                                <tr class="flex">
+                                    <th>Institution</th>
+                                    <td>Asian School of Management and Technology (ASMT)</td>
+                                </tr>
+                                <tr class="flex">
+                                    <th>Completed Year</th>
+                                    <td>Current</td>
+                                </tr>
+                                <tr class="flex">
+                                    <th>CGPA</th>
+                                    <td>-</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="language-proficiency">
